# fastapi-openapi

milk-client/: .gitignore  README.md  __main__.py  pyproject.toml
milk-client/milk_client/: __init__.py
milk-client/milk_client/api/default/: read_item.py
milk-client/milk_client/models/: __init__.py  http_validation_error.py  item_response.py  validation_error.py
milk-service/: Pipfile
milk-service/milk/: main.py
milk-service/milk/models/: items.py
milk-service/milk/routers/: items.py
